# dbt-doc-to-pdf

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  dbt.sh  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  spec_and_readme.md  導入.md
sample_project/: .user.yml  dbt_project.yml  profiles.yml
sample_project/models/ecommerce/: customers.sql  orders.sql  schema.yml
sample_project/models/staging/: schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql
src/dbt_doc_to_pdf/: __main__.py  er_diagram.py  extractor.py  html_gen.py  loader.py  models.py  pdf_gen.py
tests/: conftest.py  test_extractor.py  test_html_content.py  test_pdf_content.py
